--- a/trunk/html/patrodent_005.htm
+++ b/trunk/html/patrodent_005.htm
@@ -8,10 +8,10 @@
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
-	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="patrodent_005_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="patrodent_005_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
+	<link rel="stylesheet" href="css/patrodent_005_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
+	<script src="js/patrodent_005_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
@@ -69,11 +69,11 @@
 	<span id="e23" class="cc47"></span>
 	<span id="e22" class="cc47"></span>
 	<a href="patrodent_009.htm">
-		<img id="e21" name="e21" src="b-norm.gif" title="" alt="b-norm.gif" align="right" border="0"></a>
+		<img id="e21" name="e21" src="./images/b-norm.gif" title="" alt="./images/b-norm.gif" align="right" border="0"></a>
 	<a href="patrodent_009.htm">
-		<img id="e20" name="e20" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e20" name="e20" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<a href="patrodent_006.htm" onmouseover="OnWeOver(0,0,0,IDP[6],Img19,'patrodent_006.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[6],Img19,0,0)">
-		<img id="e19" name="e19" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e19" name="e19" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e18" class="cc48">
 		<a href="patrodent_006.htm">
 		ODONTOLOGIA GENERAL</a>
@@ -91,11 +91,11 @@
 		PERIODONCIA</a>
 	</div>
 	<a href="patrodent_007.htm" onmouseover="OnWeOver(0,0,0,IDP[5],Img14,'patrodent_007.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[5],Img14,0,0)">
-		<img id="e14" name="e14" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e14" name="e14" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<a href="patrodent_008.htm" onmouseover="OnWeOver(0,0,0,IDP[4],Img13,'patrodent_008.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[4],Img13,0,0)">
-		<img id="e13" name="e13" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e13" name="e13" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<a href="patrodent_010.htm" onmouseover="OnWeOver(0,0,0,IDP[3],Img12,'patrodent_010.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[3],Img12,0,0)">
-		<img id="e12" name="e12" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e12" name="e12" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e11" class="cc48">
 		<a href="patrodent_010.htm">
 		ORTODONCIA</a>
@@ -109,9 +109,9 @@
 		ATM (Problemas de Articulación)</a>
 	</div>
 	<a href="patrodent_011.htm" onmouseover="OnWeOver(0,0,0,IDP[2],Img8,'patrodent_011.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[2],Img8,0,0)">
-		<img id="e8" name="e8" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e8" name="e8" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<a href="patrodent_012.htm" onmouseover="OnWeOver(0,0,0,IDP[1],Img7,'patrodent_012.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img7,0,0)">
-		<img id="e7" name="e7" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e7" name="e7" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e6" class="cc49">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
