--- a/trunk/html/patrodent_006.htm
+++ b/trunk/html/patrodent_006.htm
@@ -8,10 +8,10 @@
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
-	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="patrodent_006_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="patrodent_006_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
+	<link rel="stylesheet" href="css/patrodent_006_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
+	<script src="js/patrodent_006_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
@@ -66,7 +66,7 @@
 	<span id="e18" class="cc57"></span>
 	<span id="e17" class="cc57"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img16,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img16,0,0)">
-		<img id="e16" name="e16" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
+		<img id="e16" name="e16" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
 	<div id="e15" class="cc58">
 		ODONTOLOGIA GENERAL
 	</div>
