--- a/trunk/html/patrodent_002.htm
+++ b/trunk/html/patrodent_002.htm
@@ -9,17 +9,17 @@
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/patrodent_002_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<link rel="stylesheet" href="css/patrodent_002_p.css" type="text/css" media="screen,projection,print">	
 </head>
 
 
 <body>
 <div id="page" class="page">
 	<span id="e30" class="header_box"></span>
-	<span id="e29" class="deco"></span>
-	<span id="e28" class="navigation_box"></span>
-	<span id="e27" class="deco"></span>
-	<span id="e26" class="navigation_box"></span>
+	<span id="e29" class="deco deco_superior"></span>
+	<span id="e28" class="navigation_box navigation_box_superior"></span>
+	<span id="e27" class="deco deco_inferior"></span>
+	<span id="e26" class="navigation_box navigation_box_inferior"></span>
 	<h4 id="e25" class="page_tag">
 		Dra. Patrocinio Gómez Martínez
 	</h4>
@@ -30,73 +30,73 @@
 		&nbsp;<br> 
 		Durante todos estos años de experiencia profesional continua su formación con múltiples participaciones y asistencia en cursos y congresos de odontología general y estética, endodoncias, prótesis, odontopediatría, ortodoncia, periodoncia, implantes, Atm y un largo etc..., hasta la actualidad donde sigue con su formación continuada para poder estar actualizada en los mas modernos avances y tecnologías, ofreciendo de este modo desde su inicio la máxima calidad que le caracteriza junto a un servicio personalizado.
 	</div>
-	<span id="e23"></span>
-	<h4 id="e22" class="page_tag">
+	<span id="e23" class="banner"></span>
+	<h4 id="e22" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
-	<div id="e21" class="cc12">
+	<div id="e21" class="copy">
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
-	<div id="e20" class="cc13">
+	<div id="e20" class="patro">
 		Patro
 	</div>
-	<div id="e19" class="cc14">
+	<div id="e19" class="dent">
 		DENT
 	</div>
-	<div id="e18" class="cc15">
+	<div id="e18" class="direccion">
 		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
 		41001 SEVILLA
 	</div>
-	<div id="e17" class="cc16">
+	<div id="e17" class="clinica">
 		Clínica Dental<br> 
 		PATROCINIO GÓMEZ MARTÍNEZ
 	</div>
-	<div id="e16" class="cc17">
+	<div id="e16" class="horario1">
 		Lunes a Viernes<br> 
 		9:30 de la Mañana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
-	<div id="e15" class="cc17">
+	<div id="e15" class="horario2">
 		&nbsp;Lunes a Jueves<br> 
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e14" class="page_tag">
+	<h4 id="e14" class="page_tag consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e13" class="page_tag">
+	<h4 id="e13" class="page_tag citas">
 		CITAS
 	</h4>
-	<span id="e12"></span>
-	<span id="e11" class="cc18"></span>
-	<span id="e10" class="cc18"></span>
+	<span id="e12" class="telefono"></span>
+	<span id="e11" class="barra"></span>
+	<span id="e10" class="barra barra2"></span>
 	<span id="e9" class="cc19"></span>
 	<span id="e8" class="cc19"></span>
 	<span id="e7" class="cc19"></span>
-	<div id="e6" class="cc20">
+	<div id="e6" class="quien menu">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="cc21">
+	<div id="e5" class="servicios menu">
 		<a href="patrodent_005.htm">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="cc21">
+	<div id="e4" class="situacion menu">
 		<a href="patrodent_003.htm">
 		SITUACION     </a>
 	</div>
-	<div id="e3" class="cc21">
+	<div id="e3" class="instalaciones menu">
 		<a href="patrodent_004.htm">
 		INSTALACIONES     </a>
 	</div>
-	<div id="e2" class="cc21">
+	<div id="e2" class="contactar menu">
 		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
 		CONTACTAR    </a>
 	</div>
-	<div id="e1" class="cc21">
+	<div id="e1" class="volver">
 		<a href="index.html">
 		Volver      </a>
 	</div>
