--- a/trunk/html/patrodent_005.htm
+++ b/trunk/html/patrodent_005.htm
@@ -18,56 +18,56 @@
 <body onload="if(IE||V5) OnWeLoad()">
 <div id="page" class="page">
 	<span id="e41" class="header_box"></span>
-	<span id="e40" class="deco"></span>
-	<span id="e39" class="navigation_box"></span>
-	<span id="e38" class="deco"></span>
-	<span id="e37" class="navigation_box"></span>
+	<span id="e40" class="deco_superior"></span>
+	<span id="e39" class="navigation_box_superior"></span>
+	<span id="e38" class="deco_inferior"></span>
+	<span id="e37" class="navigation_box_inferior"></span>
 	<h4 id="e36" class="page_tag">
 		Servicios
 	</h4>
-	<span id="e35"></span>
-	<h4 id="e34" class="page_tag">
+	<span id="e35" class="banner"></span>
+	<h4 id="e34" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
-	<div id="e33" class="cc41">
+	<div id="e33" class="copy">
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
-	<div id="e32" class="cc42">
+	<div id="e32" class="patro">
 		Patro
 	</div>
-	<div id="e31" class="cc43">
+	<div id="e31" class="dent">
 		DENT
 	</div>
-	<div id="e30" class="cc44">
+	<div id="e30" class="direccion">
 		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
 		41001 SEVILLA
 	</div>
-	<div id="e29" class="cc45">
+	<div id="e29" class="clinica">
 		Clínica Dental<br> 
 		PATROCINIO GÓMEZ MARTÍNEZ
 	</div>
-	<div id="e28" class="cc46">
+	<div id="e28" class="horario1">
 		Lunes a Viernes<br> 
 		9:30 de la Mañana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
-	<div id="e27" class="cc46">
+	<div id="e27" class="horario2">
 		&nbsp;Lunes a Jueves<br> 
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e26" class="page_tag">
+	<h4 id="e26" class="consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e25" class="page_tag">
+	<h4 id="e25" class="citas">
 		CITAS
 	</h4>
-	<span id="e24"></span>
-	<span id="e23" class="cc47"></span>
-	<span id="e22" class="cc47"></span>
+	<span id="e24" class="telefono"></span>
+	<span id="e23" class="barra"></span>
+	<span id="e22" class="barra barra2"></span>
 	<a href="patrodent_009.htm">
 		<img id="e21" name="e21" src="./images/b-norm.gif" title="" alt="./images/b-norm.gif" align="right" border="0"></a>
 	<a href="patrodent_009.htm">
@@ -112,27 +112,27 @@
 		<img id="e8" name="e8" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<a href="patrodent_012.htm" onmouseover="OnWeOver(0,0,0,IDP[1],Img7,'patrodent_012.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img7,0,0)">
 		<img id="e7" name="e7" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<div id="e6" class="cc49">
+	<div id="e6" class="quien menu">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="cc50">
+	<div id="e5" class="servicios menu">
 		<a href="patrodent_005.htm">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="cc50">
+	<div id="e4" class="situacion menu">
 		<a href="patrodent_003.htm">
 		SITUACION     </a>
 	</div>
-	<div id="e3" class="cc50">
+	<div id="e3" class="instalaciones menu">
 		<a href="patrodent_004.htm">
 		INSTALACIONES     </a>
 	</div>
-	<div id="e2" class="cc50">
+	<div id="e2" class="contactar menu">
 		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
 		CONTACTAR    </a>
 	</div>
-	<div id="e1" class="cc50">
+	<div id="e1" class="volver">
 		<a href="index.html">
 		Volver      </a>
 	</div>
