--- a/trunk/html/patrodent_006.htm
+++ b/trunk/html/patrodent_006.htm
@@ -18,53 +18,53 @@
 <body onload="if(IE||V5) OnWeLoad()">
 <div id="page" class="page">
 	<span id="e35" class="header_box"></span>
-	<span id="e34" class="deco"></span>
-	<span id="e33" class="navigation_box"></span>
-	<span id="e32" class="deco"></span>
-	<span id="e31" class="navigation_box"></span>
-	<span id="e30"></span>
-	<h4 id="e29" class="page_tag">
+	<span id="e34" class="deco_superior"></span>
+	<span id="e33" class="navigation_box_superior"></span>
+	<span id="e32" class="deco_inferior"></span>
+	<span id="e31" class="navigation_box_inferior"></span>
+	<span id="e30" class="banner"></span>
+	<h4 id="e29" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
-	<div id="e28" class="cc51">
+	<div id="e28" class="copy">
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
-	<div id="e27" class="cc52">
+	<div id="e27" class="patro">
 		Patro
 	</div>
-	<div id="e26" class="cc53">
+	<div id="e26" class="dent">
 		DENT
 	</div>
-	<div id="e25" class="cc54">
+	<div id="e25" class="direccion">
 		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
 		41001 SEVILLA
 	</div>
-	<div id="e24" class="cc55">
+	<div id="e24" class="clinica">
 		Clínica Dental<br> 
 		PATROCINIO GÓMEZ MARTÍNEZ
 	</div>
-	<div id="e23" class="cc56">
+	<div id="e23" class="horario1">
 		Lunes a Viernes<br> 
 		9:30 de la Mañana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
-	<div id="e22" class="cc56">
+	<div id="e22" class="horario2">
 		&nbsp;Lunes a Jueves<br> 
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e21" class="page_tag">
+	<h4 id="e21" class="page_tag consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e20" class="page_tag">
+	<h4 id="e20" class="page_tag citas">
 		CITAS
 	</h4>
-	<span id="e19"></span>
-	<span id="e18" class="cc57"></span>
-	<span id="e17" class="cc57"></span>
+	<span id="e19" class="telefono"></span>
+	<span id="e18" class="barra"></span>
+	<span id="e17" class="barra barra2"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img16,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img16,0,0)">
 		<img id="e16" name="e16" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
 	<div id="e15" class="cc58">
@@ -91,27 +91,27 @@
 	<span id="e9" class="cc59"></span>
 	<span id="e8" class="cc59"></span>
 	<span id="e7"></span>
-	<div id="e6" class="cc60">
+	<div id="e6" class="quien menu">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="cc61">
+	<div id="e5" class="servicios menu">
 		<a href="patrodent_005.htm">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="cc61">
+	<div id="e4" class="situacion menu">
 		<a href="patrodent_003.htm">
 		SITUACION     </a>
 	</div>
-	<div id="e3" class="cc61">
+	<div id="e3" class="instalaciones menu">
 		<a href="patrodent_004.htm">
 		INSTALACIONES     </a>
 	</div>
-	<div id="e2" class="cc61">
+	<div id="e2" class="contactar menu">
 		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
 		CONTACTAR    </a>
 	</div>
-	<div id="e1" class="cc61">
+	<div id="e1" class="volver">
 		<a href="patrodent_005.htm">
 		Volver      </a>
 	</div>
