--- a/trunk/html/patrodent_008.htm
+++ b/trunk/html/patrodent_008.htm
@@ -18,53 +18,53 @@
 <body onload="if(IE||V5) OnWeLoad()">
 <div id="page" class="page">
 	<span id="e29" class="header_box"></span>
-	<span id="e28" class="deco"></span>
-	<span id="e27" class="navigation_box"></span>
-	<span id="e26" class="deco"></span>
-	<span id="e25" class="navigation_box"></span>
-	<span id="e24"></span>
-	<h4 id="e23" class="page_tag">
+	<span id="e28" class="deco_superior"></span>
+	<span id="e27" class="navigation_box_superior"></span>
+	<span id="e26" class="deco_inferior"></span>
+	<span id="e25" class="navigation_box_inferior"></span>
+	<span id="e24" class="banner"></span>
+	<h4 id="e23" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
-	<div id="e22" class="cc73">
+	<div id="e22" class="copy">
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
-	<div id="e21" class="cc74">
+	<div id="e21" class="patro">
 		Patro
 	</div>
-	<div id="e20" class="cc75">
+	<div id="e20" class="dent">
 		DENT
 	</div>
-	<div id="e19" class="cc76">
+	<div id="e19" class="direccion">
 		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
 		41001 SEVILLA
 	</div>
-	<div id="e18" class="cc77">
+	<div id="e18" class="clinica">
 		Clínica Dental<br> 
 		PATROCINIO GÓMEZ MARTÍNEZ
 	</div>
-	<div id="e17" class="cc78">
+	<div id="e17" class="horario1">
 		Lunes a Viernes<br> 
 		9:30 de la Mañana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
-	<div id="e16" class="cc78">
+	<div id="e16" class="horario2">
 		&nbsp;Lunes a Jueves<br> 
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e15" class="page_tag">
+	<h4 id="e15" class="page_tag consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e14" class="page_tag">
+	<h4 id="e14" class="page_tag citas">
 		CITAS
 	</h4>
-	<span id="e13"></span>
-	<span id="e12" class="cc79"></span>
-	<span id="e11" class="cc79"></span>
+	<span id="e13" class="telefono"></span>
+	<span id="e12" class="barra"></span>
+	<span id="e11" class="barra barra2"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img10,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img10,0,0)">
 		<img id="e10" name="e10" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
 	<div id="e9" class="cc80">
@@ -78,27 +78,27 @@
 		La Dra. Patrocinio Gómez está muy habituada, debido a su experiencia, a tratar a los pequeños pacientes con la dedicación y cuidado que esta delicada relación terapéutica requiere.
 	</div>
 	<span id="e7" class="cc81"></span>
-	<div id="e6" class="cc82">
+	<div id="e6" class="quien menu">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="cc83">
+	<div id="e5" class="servicios menu">
 		<a href="patrodent_005.htm">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="cc83">
+	<div id="e4" class="situacion menu">
 		<a href="patrodent_003.htm">
 		SITUACION     </a>
 	</div>
-	<div id="e3" class="cc83">
+	<div id="e3" class="instalaciones menu">
 		<a href="patrodent_004.htm">
 		INSTALACIONES     </a>
 	</div>
-	<div id="e2" class="cc83">
+	<div id="e2" class="contactar menu">
 		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
 		CONTACTAR    </a>
 	</div>
-	<div id="e1" class="cc83">
+	<div id="e1" class="volver">
 		<a href="patrodent_005.htm">
 		Volver      </a>
 	</div>
