--- a/trunk/html/patrodent_009.htm
+++ b/trunk/html/patrodent_009.htm
@@ -18,53 +18,53 @@
 <body onload="if(IE||V5) OnWeLoad()">
 <div id="page" class="page">
 	<span id="e31" class="header_box"></span>
-	<span id="e30" class="deco"></span>
-	<span id="e29" class="navigation_box"></span>
-	<span id="e28" class="deco"></span>
-	<span id="e27" class="navigation_box"></span>
-	<span id="e26"></span>
-	<h4 id="e25" class="page_tag">
+	<span id="e30" class="deco_superior"></span>
+	<span id="e29" class="navigation_box_superior"></span>
+	<span id="e28" class="deco_inferior"></span>
+	<span id="e27" class="navigation_box_inferior"></span>
+	<span id="e26" class="banner"></span>
+	<h4 id="e25" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
-	<div id="e24" class="cc84">
+	<div id="e24" class="copy">
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
-	<div id="e23" class="cc85">
+	<div id="e23" class="patro">
 		Patro
 	</div>
-	<div id="e22" class="cc86">
+	<div id="e22" class="dent">
 		DENT
 	</div>
-	<div id="e21" class="cc87">
+	<div id="e21" class="direccion">
 		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
 		41001 SEVILLA
 	</div>
-	<div id="e20" class="cc88">
+	<div id="e20" class="clinica">
 		Clínica Dental<br> 
 		PATROCINIO GÓMEZ MARTÍNEZ
 	</div>
-	<div id="e19" class="cc89">
+	<div id="e19" class="horario1">
 		Lunes a Viernes<br> 
 		9:30 de la Mañana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
-	<div id="e18" class="cc89">
+	<div id="e18" class="horario2">
 		&nbsp;Lunes a Jueves<br> 
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e17" class="page_tag">
+	<h4 id="e17" class="page_tag consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e16" class="page_tag">
+	<h4 id="e16" class="page_tag citas">
 		CITAS
 	</h4>
-	<span id="e15"></span>
-	<span id="e14" class="cc90"></span>
-	<span id="e13" class="cc90"></span>
+	<span id="e15" class="telefono"></span>
+	<span id="e14" class="barra"></span>
+	<span id="e13" class="barra barra2"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img12,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img12,0,0)">
 		<img id="e12" name="e12" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
 	<div id="e11" class="cc91">
@@ -78,27 +78,27 @@
 	<span id="e9"></span>
 	<span id="e8"></span>
 	<span id="e7"></span>
-	<div id="e6" class="cc92">
+	<div id="e6" class="quien menu">
 		<a href="patrodent_002.htm">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="cc93">
+	<div id="e5" class="servicios menu">
 		<a href="patrodent_005.htm">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="cc93">
+	<div id="e4" class="situacion menu">
 		<a href="patrodent_003.htm">
 		SITUACION     </a>
 	</div>
-	<div id="e3" class="cc93">
+	<div id="e3" class="instalaciones menu">
 		<a href="patrodent_004.htm">
 		INSTALACIONES     </a>
 	</div>
-	<div id="e2" class="cc93">
+	<div id="e2" class="contactar menu">
 		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
 		CONTACTAR    </a>
 	</div>
-	<div id="e1" class="cc93">
+	<div id="e1" class="volver">
 		<a href="patrodent_005.htm">
 		Volver      </a>
 	</div>
